Fri Oct 23 18:10:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .gitignore: ignored environmantal wrapper files.

Fri Oct 23 17:55:29 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb.rb: Ignored assignment of STDOUT.sync = true
	  when irb.rb loaded. It's affected to IDE such as Jetbrain.
	  [fix GH-864] Patch by @os97673

Fri Oct 23 16:35:08 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/ipaddr.rb, test/test_ipaddr.rb: Reject invalid address contained
	  EOL string. Patch by @kachick [fix GH-942][Bug #11513]

Fri Oct 23 16:03:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* file.c: fix indent style. [fix GH-977]
	* test/ruby/test_string.rb: indent. [fix GH-975]
	  [ci skip] These patches are contributed from @yui-knk

Fri Oct 23 15:46:09 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: Added method signature to include hash. It's inconsistency
	  with `gsub` method signature.
	  [ci skip][fix GH-1023] Patch by @danielevans

Fri Oct 23 15:25:51 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: remove an empty comment line and -*-.

Fri Oct 23 15:20:02 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (gettextfile, getbinaryfile): use the safe
	  navigation operator.

Fri Oct 23 13:51:33 2015  yui-knk  <spiketeika@gmail.com>

	* test_call.rb (test_safe_call): Add test cases for safe
	  navigation operator assignment.  [Fix GH-1064]
	  Validate:
	  * can assign an attribute which is `nil`
	  * can "or assign" an attribute which is `nil`

Fri Oct 23 11:58:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): optimize lengthy safe
	  navigation method chain.  [Feature #11537]

Fri Oct 23 10:58:41 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/matrix/eigenvalue_decomposition.rb (tridiagonalize): fix
	  indentation to avoid a warning when the command line option -w of
	  ruby is specified.

	* lib/matrix/eigenvalue_decomposition.rb (hessenberg_to_real_schur):